[gd_scene load_steps=11 format=2]

[ext_resource path="res://Characters/CaveDemon/state_machine/cavedemon_state_machine.gd" type="Script" id=1]
[ext_resource path="res://Characters/CaveDemon/state_machine/states/motion/on_ground/attack.gd" type="Script" id=2]
[ext_resource path="res://Characters/CaveDemon/CaveDemon.gd" type="Script" id=3]
[ext_resource path="res://Characters/CaveDemon/state_machine/states/motion/on_ground/idle.gd" type="Script" id=4]
[ext_resource path="res://Characters/CaveDemon/assets/basic.png" type="Texture" id=5]
[ext_resource path="res://Characters/CaveDemon/state_machine/states/motion/on_ground/move.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.6627, 11.7296 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 77.0

[node name="CaveDemon" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )
START_STATE = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.60065 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="PlayerDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
shape = SubResource( 4 )

[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
